--- a/account/pom.xml
+++ b/account/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.5.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.lab.impacta</groupId>
+	<groupId>br.com.rafaelnicolei.education</groupId>
 	<artifactId>account</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>account</name>
-	<description>Project of Lab Impacta - Account</description>
+	<description>Project - Account</description>
 	<properties>
 		<java.version>11</java.version>
 		<gson-version>2.8.1</gson-version>
