--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -2,19 +2,14 @@
 pipeline {
 	agent none  stages {
   	stage('Maven Install') {
-    	agent {
-      	docker {
-        	image 'maven:3.5.0'
-        }
-      }
       steps {
-      	sh 'mvn clean install'
+      	sh 'mvn clean package'
       }
     }
     stage('Docker Build') {
     	agent any
       steps {
-      	sh 'docker build -t shanem/spring-petclinic:latest .'
+      	sh 'docker build -t rafaelnicoleti/hexagonal-java-account:latest .'
       }
     }
     stage('Docker Push') {
