--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -1,25 +1,25 @@
 #!groovy
 pipeline {
-	agent none  stages {
-  	stage('Maven Install') {
-      steps {
-      	sh 'mvn clean package'
-      }
-    }
-    stage('Docker Build') {
-    	agent any
-      steps {
-      	sh 'docker build -t rafaelnicoleti/hexagonal-java-account:latest .'
-      }
-    }
-    stage('Docker Push') {
-    	agent any
-      steps {
-      	withCredentials([usernamePassword(credentialsId: 'dockerhub', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
-        	sh "docker login -u ${env.dockerHubUser} -p ${env.dockerHubPassword}"
-          sh 'docker push rafaelnicoleti/hexagonal-java-account:latest'
+	agent none
+	stages {
+        stage('Maven Install') {
+          steps {
+            sh 'mvn clean package'
         }
-      }
+        stage('Docker Build') {
+            agent any
+          steps {
+            sh 'docker build -t rafaelnicoleti/hexagonal-java-account:latest .'
+          }
+        }
+        stage('Docker Push') {
+            agent any
+          steps {
+            withCredentials([usernamePassword(credentialsId: 'dockerhub', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
+                sh "docker login -u ${env.dockerHubUser} -p ${env.dockerHubPassword}"
+              sh 'docker push rafaelnicoleti/hexagonal-java-account:latest'
+            }
+          }
+        }
     }
-  }
 }
