--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -1,26 +1,71 @@
 #!groovy
+// Jenkinsfile (Declarative Pipeline)
+// Global Variable goes here
+// Pipeline block
 pipeline {
-	agent none
-	stages {
-        stage('Maven Install') {
-          steps {
-            sh 'mvn clean package'
-          }
-        }
-        stage('Docker Build') {
-            agent any
-          steps {
-            sh 'docker build -t rafaelnicoleti/hexagonal-java-account:latest .'
-          }
-        }
-        stage('Docker Push') {
-            agent any
-          steps {
-            withCredentials([usernamePassword(credentialsId: 'dockerhub', passwordVariable: 'dockerHubPassword', usernameVariable: 'dockerHubUser')]) {
-                sh "docker login -u ${env.dockerHubUser} -p ${env.dockerHubPassword}"
-              sh 'docker push rafaelnicoleti/hexagonal-java-account:latest'
-            }
-          }
-        }
-    }
+// Agent block
+agent {
+   any
 }
+options {
+   buildDiscarder(logRotator(numToKeepStr: '5'))
+   timestamps()
+}
+parameters {
+   string(name: "Branch_Name", defaultValue: 'main', description: 'A name of the Git branch that contain the jenkinfile code')
+   string(name: "Image_Name", defaultValue: 'rafaelnicoleti/hexagonal-java-account', description: 'A name of the image that you want to build')
+   string(name: "Image_Tag", defaultValue: 'latest', description: 'Image tag')
+   string(name: 'HTTP_PROXY', defaultValue: '<add the proxy details if the network is behind the proxy>', description: 'The proxy address to be used to connect to outside network when running docker build.')
+   string(name: 'HTTPS_PROXY', defaultValue: '<add the proxy details if the network is behind the proxy>', description: 'The proxy address to be used to connect to outside network when running docker build.')
+
+   booleanParam(name: "PushImage", defaultValue: false)
+}
+// Stage Block
+stages {// stage blocks
+   stage("Build docker images") {
+      steps {
+         script {
+            echo "Bulding docker images"
+            def buildArgs = """\
+--build-arg HTTP_PROXY=${params.HTTP_PROXY} \
+--build-arg HTTPS_PROXY=${params.HTTPS_PROXY} \
+-f Dockerfile \
+."""
+            docker.build("${params.Image_Name}:${params.Image_Tag}", buildArgs)
+         }
+     }
+}
+stage("Push to Dockerhub") {
+   when {
+      equals expected: "true", actual: "${params.PushImage}"
+   }
+   steps {
+      script {
+         echo "Pushing the image to docker hub"
+         def localImage = "${params.Image_Name}:${params.Image_Tag}"
+         def repositoryName = "${localImage}"
+         sh "docker tag ${localImage} ${repositoryName} "
+         docker.withRegistry("", "dockerhub") {
+            def image = docker.image("${repositoryName}");
+            image.push()
+         }
+     }
+  }
+}}
+post {
+   always {
+      script {
+         echo "I am execute always"
+      }
+   }
+   success {
+      script {
+         echo "I am execute on success"
+      }
+   }
+   failure {
+      script {
+         echo "I am execute on failure"
+      }
+   }
+}}
