--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -7,6 +7,8 @@ pipeline {
     stages {
         stage('Build') {
             steps {
+                sh 'export MAVEN_HOME=/opt/maven'
+                sh 'export PATH=$PATH:$MAVEN_HOME/bin'
                 sh 'mvn clean package'
             }
         }
