--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -7,9 +7,9 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'export MAVEN_HOME=/opt/maven'
-                sh 'export PATH=$PATH:$MAVEN_HOME/bin'
-                sh 'mvn clean package'
+                container ('maven') {
+                    sh 'mvn clean package'
+                }
             }
         }
         stage('Build Docker image') {
