--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
             steps {
                 container ('maven') {
                     sh 'mvn clean package'
+                    sh 'echo Build Success'
                 }
             }
         }
