--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         pollSCM '* * * * *'
     }
     tools {
-        maven
+        maven '3.8.6'
     }
     stages {
         stage('Build') {
