--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         stage('Build Docker image') {
             steps {
                 sh 'cd /var/jenkins_home/workspace/pipeline-java-account/account'
-                sh 'docker build rafaelnicoleti/hexagonal-java-account:latest .'
+                sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
             }
         }
         stage('Push Docker image') {
