--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -19,6 +19,10 @@ pipeline {
         }
         stage('Build Docker image') {
             steps {
+                sh 'sudo sudo usermod -aG docker $USER'
+                sh 'sudo usermod -aG docker jenkins'
+                sh 'systemctl daemon-reload'
+                sh 'systemctl restart docker'
                 sh 'cd /var/jenkins_home/workspace/pipeline-java-account/account'
                 sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
             }
