--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -12,12 +12,17 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Start build pipeline'
+                sh 'cd /var/jenkins_home/workspace/pipeline-java-account/account'
                 sh 'mvn -f /var/jenkins_home/workspace/pipeline-java-account/account/pom.xml clean package'
                 echo 'Finish build pipeline'
             }
         }
         stage('Build Docker image') {
             steps {
+                sh 'usermod -aG docker jenkins'
+                sh 'systemctl daemon-reload'
+                sh 'systemctl restart docker'
+                sh 'cd /var/jenkins_home/workspace/pipeline-java-account/account'
                 sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
             }
         }
