--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -25,7 +25,10 @@ pipeline {
 //                 sh 'systemctl daemon-reload'
 //                 sh 'systemctl restart docker'
 //                 sh 'cd /var/jenkins_home/workspace/pipeline-java-account/account'
-                sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
+                docker {
+                    sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
+                }
+
             }
         }
         stage('Push Docker image') {
