--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -25,6 +25,7 @@ pipeline {
 //                 sh 'systemctl daemon-reload'
 //                 sh 'systemctl restart docker'
 //                 sh 'cd /var/jenkins_home/workspace/pipeline-java-account/account'
+                sh 'systemctl start docker'
                 sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
             }
         }
