--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -1,6 +1,32 @@
 #!groovy
 pipeline {
-    agent { label 'linux-manjaro' }
+    agent {
+        label 'linux-manjaro'
+        defaultContainer 'jnlp'
+        yaml """
+apiVersion: v1
+kind: Pod
+metadata:
+labels:
+  component: ci
+spec:
+  # Use service account that can deploy to all namespaces
+  serviceAccountName: cd-jenkins
+  containers:
+  - name: docker
+      image: docker:latest
+      command:
+      - cat
+      tty: true
+      volumeMounts:
+      - mountPath: /var/run/docker.sock
+        name: docker-sock
+    volumes:
+      - name: docker-sock
+        hostPath:
+          path: /var/run/docker.sock
+"""
+    }
     triggers {
         pollSCM '* * * * *'
     }
