--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -47,14 +47,9 @@ pipeline {
         }
         stage('Build Docker image') {
             steps {
-//                 sh 'groupadd docker'
-//                 sh 'usermod -aG docker jenkins'
-//                 sh 'newgrp docker'
-//                 sh 'systemctl daemon-reload'
-//                 sh 'systemctl restart docker'
-//                 sh 'cd /var/jenkins_home/workspace/pipeline-java-account/account'
-//                 sh 'systemctl start docker'
-                sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
+                container('docker') {
+                    sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
+                }
             }
         }
         stage('Push Docker image') {
