--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -47,7 +47,7 @@ pipeline {
         }
         stage('Build Docker image') {
             steps {
-                container('docker') {
+                docker {
                     sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
                 }
             }
