--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -1,34 +1,6 @@
 #!groovy
 pipeline {
-    agent {
-        any {
-             label 'account-application'
-             defaultContainer 'jnlp'
-             yaml """
-            apiVersion: v1
-            kind: Pod
-            metadata:
-            labels:
-              component: ci
-            spec:
-              # Use service account that can deploy to all namespaces
-              serviceAccountName: cd-jenkins
-              containers:
-              - name: docker
-                  image: docker:latest
-                  command:
-                  - cat
-                  tty: true
-                  volumeMounts:
-                  - mountPath: /var/run/docker.sock
-                    name: docker-sock
-                volumes:
-                  - name: docker-sock
-                    hostPath:
-                      path: /var/run/docker.sock
-            """
-        }
-    }
+    agent { label 'linux-manjaro' }
     triggers {
         pollSCM '* * * * *'
     }
@@ -40,21 +12,15 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Start build pipeline'
-                sh 'cd /var/jenkins_home/workspace/pipeline-java-account/account'
                 sh 'mvn -f /var/jenkins_home/workspace/pipeline-java-account/account/pom.xml clean package'
                 echo 'Finish build pipeline'
             }
         }
         stage('Build Docker image') {
             steps {
-//                 sh 'groupadd docker'
-//                 sh 'usermod -aG docker jenkins'
-//                 sh 'newgrp docker'
-//                 sh 'systemctl daemon-reload'
-//                 sh 'systemctl restart docker'
-//                 sh 'cd /var/jenkins_home/workspace/pipeline-java-account/account'
-//                 sh 'systemctl start docker'
-                sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
+                agent {
+                    docker { sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .' }
+                }
             }
         }
         stage('Push Docker image') {
