--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -1,6 +1,7 @@
 #!groovy
 pipeline {
-    agent { label 'linux-manjaro' }
+//     agent { label 'linux-manjaro' }
+    agent { dockerfile true }
     triggers {
         pollSCM '* * * * *'
     }
@@ -18,9 +19,7 @@ pipeline {
         }
         stage('Build Docker image') {
             steps {
-                agent {
-                    docker { sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .' }
-                }
+//                 sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .' }
             }
         }
         stage('Push Docker image') {
