Ajustes Jenkins File

--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -1,13 +1,17 @@
 #!groovy
 pipeline {
 //     agent { label 'linux-manjaro' }
-    agent { dockerfile true }
+    agent any
+    tools {
+        // a bit ugly because there is no `@Symbol` annotation for the DockerTool
+        // see the discussion about this in PR 77 and PR 52:
+        // https://github.com/jenkinsci/docker-commons-plugin/pull/77#discussion_r280910822
+        // https://github.com/jenkinsci/docker-commons-plugin/pull/52
+        maven 'Maven'
+        'org.jenkinsci.plugins.docker.commons.tools.DockerTool' '18.09'
+      }
     triggers {
         pollSCM '* * * * *'
-    }
-    tools {
-        maven 'Maven'
-        dockerTool 'docker'
     }
     stages {
         stage('Build') {
@@ -19,7 +23,7 @@ pipeline {
         }
         stage('Build Docker image') {
             steps {
-//                 sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .' }
+                sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .' }
             }
         }
         stage('Push Docker image') {
