Ajustes Jenkins File

--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         }
         stage('Build Docker image') {
             steps {
-                sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .' }
+                sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
             }
         }
         stage('Push Docker image') {
