--- a/account/Jenkinsfile
+++ b/account/Jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
         stage('Build Docker image') {
             steps {
 //                 sh 'docker build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .'
-                   docker.build -f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest .
+                   docker.build '-f /var/jenkins_home/workspace/pipeline-java-account/account/Dockerfile -t rafaelnicoleti/hexagonal-java-account:latest'
             }
         }
         stage('Push Docker image') {
